--- a/css/styles.css
+++ b/css/styles.css
@@ -25,9 +25,9 @@
    --color--dark: #231F20;
    --color--bg--dark: #001628;
    --color--dark--transparent: #001628ea;
-   --color--bg--blue: #59A9B5;
+   --color--bg--blue: #39909d;
    --color--bg--brown: #6E6C4F;
-   --color--scroll: #68A2B9;
+   --color--scroll: #68a2b9;
    --color--bg--scroll: #343A40;
    /* #endregion COLORS */
    font-family: 'Roboto', sans-serif;
@@ -165,8 +165,8 @@ a:hover {
    background: linear-gradient(0deg,
    rgba(110,108,79,1) 0%,
    rgba(110,108,79,1) var(--porcent--change--color),
-   rgba(89,169,181,1) var(--porcent--change--color),
-   rgba(89,169,181,1) 100%);
+   #39909d var(--porcent--change--color),
+   #39909d 100%);
 }
 
 .bg-green { background-color: transparent; }
